session-12-ingress-configmaps-secrets/Dhruv-Bansal-24BCS10114/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: session12-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: page
              mountPath: /usr/share/nginx/html/index.html
              subPath: backend.html
      volumes:
        - name: page
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: session12-demo
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
