session-12-ingress-configmaps-secrets/Dhruv-Bansal-24BCS10114/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: session12-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: page
              mountPath: /usr/share/nginx/html/index.html
              subPath: frontend.html
      volumes:
        - name: page
          configMap:
            name: app-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: session12-demo
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
